[gd_scene load_steps=3 format=3 uid="uid://cyvckeq0ym16y"]

[ext_resource type="Script" uid="uid://lvx4xdq5fw84" path="res://scripts/camera_manager.gd" id="1_lneux"]
[ext_resource type="Script" uid="uid://d1rw17gmp2rch" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_32q6i"]

[node name="CameraManager" type="Node2D"]
script = ExtResource("1_lneux")

[node name="PlayerCamera" type="Camera2D" parent="."]
light_mask = 128
visibility_layer = 128
position = Vector2(0, -1)
limit_left = -514
limit_top = -294
limit_right = 26
limit_bottom = 58

[node name="MyPhantomCameraHost" type="Node" parent="PlayerCamera"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_32q6i")
